--- a/OutliersAPP.SPA/package.json
+++ b/OutliersAPP.SPA/package.json
@@ -12,17 +12,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.3",
+    "@angular/cdk": "^7.2.0",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^7.2.0",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@aspnet/signalr": "^1.1.0",
     "@auth0/angular-jwt": "^2.1.2",
     "alertifyjs": "^1.11.2",
+    "angular-material": "^1.1.22",
     "angular-read-more": "^1.0.7",
     "bootstrap-v4-rtl": "^4.1.1-0",
     "bootswatch": "^4.1.1",
