--- a/OutliersAPP.API/OutliersAPP.API.csproj
+++ b/OutliersAPP.API/OutliersAPP.API.csproj
@@ -15,6 +15,6 @@
     <PackageReference Include="CloudinaryDotNet" Version="1.3.0"/>
     <PackageReference Include="Stripe.net" Version="24.3.0"/>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2"/>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2"/>
+    <!-- <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2"/> -->
   </ItemGroup>
 </Project>
